text alignment fix

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -472,7 +472,7 @@ footer{
 .me{
 	color: black;
 	font-size: 1.5em;
-	text-align: center;
+	text-align: justify;
 	font-family: Lobster, Sans-Serif;
 }
 
